# ros2_robot_ws

./: LICENSE  README.md
doc/: ethercat_driver_doc.md
src/ethercat_device_control/: CMakeLists.txt  ethercat_device_control.xml  package.xml
src/ethercat_device_control/config/: controllers.yaml
src/ethercat_device_control/include/ethercat_device_control/: ethercat_hardware_interface.hpp
src/ethercat_device_control/launch/: ethercat_bringup.launch.py
src/ethercat_device_control/src/: ethercat_hardware_interface.cpp
src/robot_new/: CMakeLists.txt  package.xml  setup.py
src/robot_new/config/: joint_names_robot_new.yaml  urdf.rviz
src/robot_new/launch/: display.launch.py
src/robot_new/meshes/: left_grep.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_camrea.STL  link_lidar.STL  right_grep.STL  straight_link.STL
src/robot_new/urdf/: robot_new.csv  robot_new.urdf
src/robot_new_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_new_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot_new.ros2_control.xacro  robot_new.srdf  robot_new.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
src/robot_new_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
